fixed button not visible on ios safari

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,7 @@
 	cursor: pointer;
 	border-radius: 12px;
 	font-size: 1.5rem;
-	color: white;
+	background-color: white;
 	text-decoration: none;
 	&:focus {
 		outline: none;
